tests/machine/x/ocaml/list_nested_assign.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/list_nested_assign.ml", line 39, characters 58-65:
39 |   matrix := List.mapi (fun i v -> if i = 1 then 5 else v) !matrix;
                                                               ^^^^^^^
Error: This expression has type int list list
       but an expression was expected of type int list
       Type int list is not compatible with type int 


Context (around line 39):
  37 | 
  38 | let () =
  39 |   matrix := List.mapi (fun i v -> if i = 1 then 5 else v) !matrix;
  40 |   print_endline (__show (List.nth List.nth (!matrix) 1 0));
  41 | 
